--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
+                <div class="about_info">
+                    <h2>👋 Some text in the Modal.. 👋</h2>
+                    <img src="/assets/wave.png" class="image-about">
+                    <h3>Some text in the Modal..</h3>
+                </div>
+                
             </div>
 
         </div>
