--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div class="about_info">
-                    <h2>👋 Some text in the Modal.. 👋</h2>
+                    <h2>👋 Show your hand to the camera! 👋</h2>
                     <img src="/assets/wave.png" class="image-about">
-                    <h3>Some text in the Modal..</h3>
+                    <h3>From about 2 feet away.</h3>
                 </div>
                 
             </div>
